ghost scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@
 		animation:				pop 0.60s infinite;
 		filter:					drop-shadow(0 0 0.75rem #000);
 		top:					0%;
-		width:					100%;
+		width:					99%;
 		font-size:				1.25em;
 	}
 
